@@ -1,4 +1,8 @@
 
+25 August 2004 Mariette
+- make function set_alpha_min_of_vertices a template 
+  so that explicir instanciation of the whole class works in any case.
+
 13 August 2004 Mariette
 - fixes in the doc
 
